--- a/config.yaml
+++ b/config.yaml
@@ -1,1 +1,2 @@
-drop_down_list: ['Data Analysis', 'EDA', 'Feature Selection', 'Feature Extraction', 'model', 'Documentation']
+model_path: "model/model.pkl"
+drop_down_list: ['Data Analysis', 'EDA', 'Cluster Analysis', 'Model', 'Feature Selection', 'Feature Extraction', 'Documentation']
