Added Client Visuals and Developer Visuals -Added templates -Added datainfo test file -Added model -Added api -Added dashboard TODO: All files Testing, Docstring, Readme

--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,5 @@
-model_path: "model/model.pkl"
+model_path: "model.pkl"
+
+dataset_path: "crop_data.csv"
+
 drop_down_list: ['Data Analysis', 'EDA', 'Cluster Analysis', 'Model', 'Feature Selection', 'Feature Extraction', 'Documentation']
